Fixed quill tooltip hidden behind the parent component

--- a/web-client/src/main/webapp/static/css/quillRichText.css
+++ b/web-client/src/main/webapp/static/css/quillRichText.css
@@ -5,3 +5,7 @@
     font-family: 'Segoe UI', 'Open Sans', Arial Unicode MS, Arial, sans-serif;
     font-size: 9pt;
 }
+
+.ql-tooltip {
+    white-space: normal; /*for the tooltip is not hidden behind the parent component*/
+}
